* Add cache settings for users cache.users.size permissions cache.permission.size and roles cache.roles.size
* Add env property to limit the number of IN query operands db.in.maxOperands for very large queries
* Add env property to control backup location paths.backup
* Only allow creating user comments if the User has read permission for the referenced item
* Upgrade log4j to 2.13.2
* You can now set log4j properties via your env.properties file
* You can now access env properties in log4j2.xml configuration files using syntax ${mango:property.name}
* You can now set env properties via Java system properties prefixed with "mango."
* You can now set env properties via environment variables prefixed with "mango_" and with dots replaced with underscores

*Version 3.7.4*
* Improve work item failure logging
* Fix DWR bug in legacy UI where module was not being assigned to the DWR upon creation
* Fix bug in User JSON importer where new users could not be created
* Fix bug where publishing lifecycle events when runtime context was closed could cause problems

*Version 3.7.3*
* Fix bug in leagcy UI introduced in 3.7.0 where loading module UI resources was not working
* Fix bug in H2 conversion to version 199 that could corrupt the database if the upgrade failed

*Version 3.7.2*
* Fix bug in upgrade script for schema version 28, use case insensitive comparison for email addresses
* Fix invalid date encoding in the configuration import/export JSON

*Version 3.7.1*
* Fix bug in MySQL where system settings were not being saved
* Disable Quality of Service filter by default
* Disable Denial of Service filter by default
* Disable Low Resource Manager by default

*Version 3.7.0*
* Add organization field to User with limit of 80 chars
* Add organizationalRole field to User with limit of 80 chars
* Track created date/time of a User, all existing users will have a created date of the upgrade date