@@ -1,16 +1,6 @@
-#    Copyright (C) 2014 Infinite Automation Systems Inc. All rights reserved.
-#    @author Matthew Lohbihler
-
-###############################################################################
-# TO OVERRIDE VALUES IN THIS FILE...
 #
-# Do not change the values in this file, because when you upgrade your core
-# your changes will be overwritten. Instead, create a new file called
-# <MA_HOME>/overrides/properties/env.properties and override properties
-# there. The overrides directory will never be overwritten by an upgrade, so
-# your customizations will be safe.
+# Copyright (C) 2020 Radix IoT LLC. All rights reserved.
 #
-###############################################################################
 
 # By default if you make changes to the env.properties file Mango will reload its settings
 # (note: this will not work for all settings)
@@ -176,7 +166,7 @@ ssl.socketIdleTimeout=70000
 #Enable ALPN (Application-Layer Protocol Negotiation) for HTTP/2
 # on current browsers HTTP/2 is only available for TLS/SSL connections.
 # Note that with this setting you must also have the ALPN script extension enabled for Mango to start on pre Java 10.
-# (Adds -javaagent:${MA_HOME}/boot/jetty-alpn-agent.jar to the java options)
+# (Adds -javaagent:boot/jetty-alpn-agent.jar to the java options)
 # If you are running on Java 10+ this library is not required and will actually cause problems, so make sure you don't use that extension.
 ssl.alpn.on=true
 #Show debug output for alpn connections in log
@@ -418,10 +408,13 @@ runtime.taskRejectionLogPeriod=10000
 runtime.shutdown.medLowTimeout=60
 runtime.shutdown.highTimeout=60
 
-# Base directory for storing variable data, relative to $MA_HOME (unless absolute path is supplied)
-paths.data=
+# Installation directory of Mango (defaults to working directory, or legacy MA_HOME environment variable)
+#paths.home=
+# Base directory for storing variable data (relative to ${paths.home} unless absolute)
+#paths.data=
+
 ##
-# NOTE: All of the following paths are relative to ${paths.data} unless they are set to an absolute path
+# NOTE: All of the following paths are relative to ${paths.data} unless absolute path is supplied
 ##
 # path to the filestore base directory
 filestore.location=filestore
@@ -439,8 +432,6 @@ paths.logs=logs
 paths.backup=backup
 # overrides path, typically for freemarker templates (/ftl) and web overrides (/web)
 paths.overrides=overrides
-# path to the log4j2 configuration file, uses built in configuration by default
-#paths.log4j.configurationFile=
 
 # HTTP session (authentication) cookie name and domain name settings.
 #
@@ -471,3 +462,21 @@ internal.monitor.pollPeriod=10000
 internal.monitor.diskUsage.pollPeriod=1200000
 # Should MA_HOME and each file store directory be monitored individually in addition to the partitions?
 internal.monitor.diskUsage.monitorDirectories=false
+
+# These settings are used in the default log4j2.xml file included with Mango. For more control, specify your own
+# log4j2.xml configuration file using the log4j2.configurationFile property.
+logger.mango.level=info
+logger.mango.includeLocation=true
+logger.root.level=warn
+logger.root.includeLocation=true
+appender.stdout.level=trace
+appender.stdout.pattern=%-5p %d{ISO8601} (%C.%M:%L) - %m %n
+appender.logfile.level=trace
+appender.logfile.pattern=%-5p %d{ISO8601} (%C.%M:%L) - %m %n
+appender.frontend.level=trace
+appender.frontend.pattern=%-5p %d{ISO8601} (%C.%M:%L) - %m %n
+
+# You can configure any log4j2 property here
+# See https://logging.apache.org/log4j/2.x/manual/configuration.html#System_Properties
+# e.g. path to your own log4j2 configuration file
+#log4j2.configurationFile=path/to/log4j2.xml
