@@ -52,10 +52,12 @@
 * Add env property to control backup location paths.backup
 * Only allow creating user comments if the User has read permission for the referenced item
 * Upgrade log4j to 2.13.2
-* You can now set log4j properties via your env.properties file
+* You can now set log4j2 properties via your env.properties file, the properties should start with "log4j2."
 * You can now access env properties in log4j2.xml configuration files using syntax ${mango:property.name}
 * You can now set env properties via Java system properties prefixed with "mango."
 * You can now set env properties via environment variables prefixed with "mango_" and with dots replaced with underscores
+* Add properties to env.properties to control the logging levels and patterns when using the built in log4j2.xml file
+* User configured log4j2.xml files using the property "${sys:ma.logs}" should be modified to use "${mango:paths.logs}" instead
 
 *Version 3.7.4*
 * Improve work item failure logging
